<resources>
    <string name="app_name">LocationNotification</string>
    <string name="title_activity_maps">Map</string>


    <string name="mainButtonText">Add Event</string>
    <string name="eventHeaderTitleText">Event Reminder</string>
    <string name="date_header_text">Date</string>
    <string name="time_header_text">Time</string>
    <string name="create_event_button_text">Create Event</string>
    <string name="view_events_button_text">Add/View Events</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_header_text">Event Title</string>
</resources>
