<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C3E0F5"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/eventReminderHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventHeaderTitleText"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/calendarViewMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/calendarViewMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31" />

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_style"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/mainButtonText"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewMain" />

        <Button
            android:id="@+id/viewEventsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_style"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/view_events_button_text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/createEventButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>